Fixed an issue where content was overlapping on phones below 320px width (for example Galaxy Fold)

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ main {
 .mission {
   display: flex;
   justify-content: center;
-  height: 60%;
+  height: 55%;
   text-align: center;
   font-family: "Open Sans";
   font-weight: 600;
@@ -136,7 +136,7 @@ main {
 
 .images {
   display: flex;
-  height: 55%;
+  height: 45%;
   background-image: url("assets/bg-img.jpg");
   background-position: bottom left;
   background-repeat: no-repeat;
